# ocaml-cmake

./: .travis.yml  README.md
cmake/: FindOCaml.cmake  UseOCaml.cmake
examples/: CMakeLists.txt
examples/hello_world_lib/: CMakeLists.txt  hello.h  hellowrap-c.c  hellowrap_ocaml.ml
toolchains/: Toolchain-mingw32.cmake  Toolchain-mingw64.cmake  Toolchain-opam-cross-windows-i686-mingw.cmake  Toolchain-opam-cross-windows-x86_64-mingw.cmake  Toolchain-opam-cross-windows.cmake
